    - [fitting] add a plane test for Basket curvature estimators (#201)
    - [fitting] add test curvature_test (#201)
    - [fitting] rework tests fit_monge_patch and glsParaboloidDer (#201)
    - [fitting] fix failing test fit_plane (#201)
    - [fitting] update tests according to curvature API changes (#201)
    - [fitting] speed up gls_sphere_der using kdtree (#201)

- Examples
    - [all] Update according to API changes (#201)

- Docs
    - [doc] Update doc according to recent API changes and new curvature estimators (#201)

--------------------------------------------------------------------------------
v.2.0.alpha1
This release improves SpatialPartitioning in several ways (CUDA support, mutable queries, ...) and add utility
classes/functions in the package Common. Also, it adds coverage tracking and several minor fixes.

- API
    - [spatialPartitioning] Add mutable query and rename query functions (#105)
    - [common] Add point types and point generation methods (#248)
    - [fitting] Fix degenerate case handling in `OrientedSphereFit` (#261)

- Bug-fixes and code improvements
    - [fitting] Fix broken include directives in Basket/Compute (#236)
    - [fitting] Reduce code coverage misses (#246)
    - [fitting] Add missing PONCA_MULTIARCH keyword to compute functions (#220)

- Cmake
    - [examples] Change folder layout of CUDA examples (#220)

- Tests
    - [all] Speed up tests in coverage mode (#236)
    - [common] Use common point type and point generation methods (#248, #220)
    - [ci] Add binding datatype test to prevent regression (#250)

- Examples
    - [nanoflann] Fix broken include directives (#236)
    - [common] Use common point type and point generation methods (#248)
    - [examples] Fix `ponca_binding` buffer overflow error (#250)
    - [examples] Add a CUDA example for 3D point clouds (#220)

- CI/Actions
    - Add coverage report for Pull Requests (#236, #245, #245)
    - [ci] Removal of submodule from code coverage test (#238)