@@ -17,8 +17,6 @@ namespace Ponca
  *
  * The differentiation is determined by a previous basket elements that must
  * provides first order derivatives of the algebraic sphere parameters.
- *
- * \todo This class is not covered by tests. Add to testsuite !
  */
 template < class DataPoint, class _NFilter, int DiffType, typename T>
 class MlsSphereFitDer : public T
